# screen_project

./: CMakeLists.txt  CMakelist.txt  Dockerfile  Makefile  README  README.md  ScreenCapture.cpp  ScreenCapture.hpp  codec.cpp  codec.hpp  exo1.cpp  exo2.cpp  fifo.hpp  headers.h  opencv.pc  receiver.cpp  receiver.hpp  screen_comm  screen_communication.cpp  screen_save  screen_save.cpp  sender.cpp  sender.hpp  server  server.cpp  socket.cpp
